✨ Improve portfolio UI: rename Biographie to Introduction, remove Home button, optimize project folder sizes and styling
- Rename 'Biographie' section to 'Introduction' (HTML, CSS, navigation)
- Remove redundant '/Home' button from navigation (logo click handles home)
- Increase project folder sizes while maintaining 3-column layout
- Optimize folder dimensions and spacing for better visual balance
- Improve project badge hover effects with glass morphism
- Clean navigation: Introduction | Projects | Contact

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
           >
         </h4>
         <ul>
-          <li><a class="nav-link" href="#accueil">/Home</a></li>
-          <li><a class="nav-link" href="#biographie">/Biographie</a></li>
+          <li><a class="nav-link" href="#introduction">/Introduction</a></li>
           <li><a class="nav-link" href="#projets">/Projets</a></li>
           <li><a class="nav-link" href="#contact">/Contact</a></li>
         </ul>
@@ -60,10 +59,9 @@
 
       <!-- Menu déroulant -->
       <div class="menu">
-        <a href="#accueil" style="--order: 1">Accueil</a>
-        <a href="#biographie" style="--order: 2">Biographie</a>
-        <a href="#projets" style="--order: 3">Projets</a>
-        <a href="#contact" style="--order: 4">Contact</a>
+        <a href="#introduction" style="--order: 1">Introduction</a>
+        <a href="#projets" style="--order: 2">Projets</a>
+        <a href="#contact" style="--order: 3">Contact</a>
       </div>
     </div>
     <div id="contenu">
@@ -75,8 +73,8 @@
         </header>
       </section>
 
-      <!-- Section Biographie -->
-      <section id="biographie" class="scroll-blur">
+      <!-- Section Introduction -->
+      <section id="introduction" class="scroll-blur">
         <img
           src="images/image_profil/Photo pro 3.jpg"
           alt="image de profil"
