Optimisation complète: zoom responsive + UX améliorée + cohérence titres
✅ Optimisation zoom (support jusqu'à 200%):
- Conversion px → rem/em pour tous les textes
- clamp() pour titres fluides (h1/h2)
- Media queries en em (75em, 48em, 30em)
- Espacements adaptatifs avec clamp()
- Correction superposition sections

✅ UX et accessibilité:
- Email avec coupure logique après @
- Badge compétence supprimé des modales
- Lien projet repositionné dans header modale
- Structure project-links pour futurs ajouts

✅ Cohérence et professionnalisme:
- Titres WordPress harmonisés (Site Vitrine/Associatif)
- Lien clementineweber.com ajouté avec style glass
- Images clementineweber intégrées
- Standards CSS modernes appliqués

--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
           <div class="conteneur-vignettes">
             <div class="vignette-projet" data-projet="projet1" data-modal="true">
               <div class="image-container">
-                <img src="images/screenshots/mh.png" alt="Site Vitrine WordPress - Luthière" />
+                <img src="images/screenshots/clementineweber/clementineweber_1.png" alt="Site Vitrine - Luthière Artisanale" />
               </div>
-              <h3>Site Vitrine WordPress - Luthière</h3>
+              <h3>Site Vitrine - Luthière Artisanale</h3>
               <div class="projet-badges">
                 <span class="badge badge-wordpress">WordPress</span>
                 <span class="badge badge-php">PHP</span>
@@ -210,7 +210,7 @@
               <div class="image-container">
                 <img src="images/vignettes/les_connexions_old_2.png" alt="Les Connexions" />
               </div>
-              <h3>Les Connexions - site associatif</h3>
+              <h3>Site Associatif - Les Connexions</h3>
               <div class="projet-badges">
                 <span class="badge badge-wordpress">WordPress</span>
                 <span class="badge badge-php">PHP</span>
@@ -260,8 +260,8 @@
             </div>
             <div class="contact-info-card">
               <h3>E-mail</h3>
-              <a href="mailto:tommyepal@gmail.com">
-                tommyepal.pro@gmail.com
+              <a href="mailto:tommyepal.pro@gmail.com">
+                <span>tommyepal.pro@</span><br><span>gmail.com</span>
               </a>
             </div>
           </div>
@@ -337,6 +337,9 @@
               <h2 class="modal-title"></h2>
               <div class="modal-badges"></div>
               <div class="modal-competence-badge"></div>
+              <div class="modal-project-links">
+                <!-- Les liens seront ajoutés dynamiquement par JavaScript -->
+              </div>
             </div>
           </div>
 
