Fix: cartes contact cliquables + renommage projet Symfony
- Correction fonctionnalité clic cartes contact
- Projet renommé 'Plateforme de Gestion de Cours'
- Suppression ombre indésirable vignettes projets

--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
           <div class="conteneur-vignettes">
             <div class="vignette-projet" data-projet="projet3" data-modal="true">
               <div class="image-container">
-                <img src="images/vignettes/Symfony_logo.svg.png" alt="Projet Symfony" />
+                <img src="images/vignettes/Symfony_logo.svg.png" alt="Plateforme de Gestion de Cours" />
               </div>
-              <h3>Projet Symfony/PostgreSQL</h3>
+              <h3>Plateforme de Gestion de Cours</h3>
               <div class="projet-badges">
                 <span class="badge badge-symfony">Symfony</span>
                 <span class="badge badge-php">PHP</span>
