Ajout projet Team Motorsport + amélioration layout vignettes
- Nouveau projet MERN Team Motorsport ajouté
- Badge JavaScript créé avec couleur officielle
- Layout vignettes uniforme avec centrage amélioré
- Taille fixe et espacement harmonieux pour toutes les vignettes

--- a/index.html
+++ b/index.html
@@ -177,6 +177,19 @@
               </div>
             </div>
             
+            <div class="vignette-projet" data-projet="projet7" data-modal="true">
+              <div class="image-container">
+                <img src="images/screenshots/kairos_racing/kairos_racing_1.png" alt="Site Team Motorsport" />
+              </div>
+              <h3>Site Team Motorsport</h3>
+              <div class="projet-badges">
+                <span class="badge badge-react">React</span>
+                <span class="badge badge-node">Node.js</span>
+                <span class="badge badge-mongo">MongoDB</span>
+                <span class="badge badge-express">Express</span>
+              </div>
+            </div>
+            
             <div class="vignette-projet" data-projet="projet4" data-modal="true">
               <div class="image-container">
                 <img src="images/vignettes/vignette_4_NodeJS_2.png" alt="API REST NodeJS" />
