--- a/index.html
+++ b/index.html
@@ -377,5 +377,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script type="module" src="js/Gradient.js"></script>
     <script type="module" src="js/app.js"></script>
+      <footer class="portfolio-footer">
+    <p class="update-date">Portfolio mis à jour en septembre 2025</p>
+      </footer>
   </body>
 </html>
