Nettoyage complet du CSS : suppression des essais de scrollbar custom, retour à la base saine avant intégration SimpleBar.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <div class="image-container">
                 <img src="images/screenshots/jsamazona/jsamazona_1.png" alt="Site e-commerce" />
               </div>
-              <h3>Site e-commerce</h3>
+              <h3>Site e-commerce inspiré d'Amazon</h3>
               <div class="projet-badges">
                 <span class="badge badge-react">React</span>
                 <span class="badge badge-node">Node.js</span>
