--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/overlayscrollbars@1.13.3/css/OverlayScrollbars.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/overlayscrollbars@1.13.3/js/OverlayScrollbars.min.js"></script>
+    <script>
+      window.addEventListener('DOMContentLoaded', function() {
+        OverlayScrollbars(document.body, {
+          className: 'os-theme-dark',
+          scrollbars: { autoHide: 'leave' }
+        });
+      });
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +31,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <link rel="icon" href="images/favicon/mountain1.ico" type="image/x-icon" />
+  <!-- SimpleBar supprimé -->
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
@@ -372,11 +383,12 @@
     </div>
 
     <!-- Scripts JavaScript -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script type="module" src="js/Gradient.js"></script>
-    <script type="module" src="js/app.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+  <script type="module" src="js/Gradient.js"></script>
+  <script type="module" src="js/app.js"></script>
+  <!-- SimpleBar JS supprimé -->
       <footer class="portfolio-footer">
     <p class="update-date">Portfolio mis à jour en septembre 2025</p>
       </footer>
