Amélioration de l’intro et espacement sous la photo de profil

--- a/index.html
+++ b/index.html
@@ -100,14 +100,10 @@
           monde fascinant du développement web.
           <br />
           <br />
-          Suite à une année d'auto-formation intensive, j'ai acquis des
-          compétences solides dans le développement frontend, tout en
-          établissant des bases dans le domaine du backend. Aujourd'hui, en tant
-          que développeur web full stack, je m'épanouis pleinement dans la
-          création de projets innovants. Mon objectif est de continuer à allier
-          mes deux passions, en contribuant activement à des projets qui
-          intègrent les avancées technologiques tout en respectant
-          l'environnement qui m'inspire tant.
+           Aujourd’hui développeur Web Junior full stack, avec une expérience dans la conception 
+          et le déploiement d'applications web, je m'épanouis pleinement dans la création de projets 
+          innovants, où j'applique la rigueur scientifique à la résolution de problèmes du développement. 
+          Après plusieurs réalisations concrètes (freelance, associatives, personnelles), mon objectif est de continuer à mettre mes compétences au service de projets stimulants, en entreprise comme en indépendant.
         </p>
       </section>
 
@@ -167,11 +163,11 @@
         <!-- Conteneur des projets Frontend/MERN -->
         <div class="stack-content" data-content="frontend">
           <div class="conteneur-vignettes">
-            <div class="vignette-projet" data-projet="projet2" data-modal="true">
+            <div class="vignette-projet" data-projet="projet7" data-modal="true">
               <div class="image-container">
-                <img src="images/screenshots/weatherapp.png" alt="Gestionnaire Backlog Jeux Vidéo" />
+                <img src="images/screenshots/kairos_racing/kairos_racing_1.png" alt="Site Team Motorsport" />
               </div>
-              <h3>Gestionnaire de Backlog Jeux Vidéo</h3>
+              <h3>Site Team Motorsport</h3>
               <div class="projet-badges">
                 <span class="badge badge-react">React</span>
                 <span class="badge badge-node">Node.js</span>
@@ -193,11 +189,11 @@
               </div>
             </div>
             
-            <div class="vignette-projet" data-projet="projet7" data-modal="true">
+            <div class="vignette-projet" data-projet="projet2" data-modal="true">
               <div class="image-container">
-                <img src="images/screenshots/kairos_racing/kairos_racing_1.png" alt="Site Team Motorsport" />
+                <img src="images/screenshots/backlog_jeux_videos/MERN.png" alt="Gestionnaire Backlog Jeux Vidéo" />
               </div>
-              <h3>Site Team Motorsport</h3>
+              <h3>Gestionnaire de Backlog Jeux Vidéo</h3>
               <div class="projet-badges">
                 <span class="badge badge-react">React</span>
                 <span class="badge badge-node">Node.js</span>
@@ -395,7 +391,7 @@
   <script type="module" src="js/app.js"></script>
   <!-- SimpleBar JS supprimé -->
       <footer class="portfolio-footer">
-    <p class="update-date">Portfolio mis à jour en septembre 2025</p>
+    <p class="update-date">Portfolio mis à jour à l'été 2025</p>
       </footer>
   </body>
 </html>
